--- a/serverless-app/serverless.yml
+++ b/serverless-app/serverless.yml
@@ -9,19 +9,74 @@ provider:
   timeout: 3
   environment: 
     NOTES_TABLE: ${self:service}-${opt:stage, self:provider.stage}
+  iamRoleStatements:
+    - Effect: Allow
+      Action: 
+        - dynamodb:Query
+        - dynamodb:PutItem
+        - dynamodb:DeleteItem
+      Resource: "arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.NOTES_TABLE}"
 
 plugins:
   - serverless-offline
 
+custom:
+  allowedHeaders:
+    - Accept
+    - Content-Type
+    - Content-Length
+    - Authorization
+    - X-Amz-Date
+    - X-Api-Key
+    - X-Amz-Security-Token
+    - X-Amz-User-Agent
+    - app_user_id
+    - app_user_name
 
 functions:
-  add:
-    handler: handlers/handler.add
+  add-note:
+    handler: api/add-note.handler
+    description: POST /note
     events:
       - http:
-          path: math/add
+          path: note
           method: post
-          cors: true
+          cors:
+            - origin: '*'
+            - headers: ${self:custom.allowedHeaders}
+
+  update-note:
+    handler: api/update-note.handler
+    description: PATCH /note
+    events:
+      - http:
+          path: note
+          method: patch
+          cors:
+            - origin: '*'
+            - headers: ${self:custom.allowedHeaders}
+
+  get-notes:
+    handler: api/get-notes.handler
+    description: GET /notes
+    events:
+      - http:
+          path: notes
+          method: get
+          cors:
+            - origin: '*'
+            - headers: ${self:custom.allowedHeaders}
+
+  get-note:
+    handler: api/get-note.handler
+    description: GET /note/n/{note_id}
+    events:
+      - http:
+          path: note/n/{note_id}
+          method: get
+          cors:
+            - origin: '*'
+            - headers: ${self:custom.allowedHeaders}
 
 resources:
   Resources:
@@ -39,9 +94,9 @@ resources:
             AttributeType: S
         KeySchema:
           - AttributeName: user_id
-            AttributeType: HASH
+            KeyType: HASH
           - AttributeName: timestamp
-            AttributeType: RANGE
+            KeyType: RANGE
         ProvisionedThroughput:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
