--- a/serverless-app/serverless.yml
+++ b/serverless-app/serverless.yml
@@ -82,7 +82,7 @@ resources:
   Resources:
     NotesTable:
       Type: AWS::DynamoDB::Table
-      DeletionPolicy: Retain
+      DeletionPolicy: Delete
       Properties:
         TableName: ${self:provider.environment.NOTES_TABLE}
         AttributeDefinitions:
